# satellite-antenna-rotator

./: .gitignore  DC Motor.scad  notes.txt
Design/: DC Motor Mount.scad  DC Motor.scad  Main.scad  pd-gears.scad
Design/output/: Azimuth_Spacer.gcode  Azimuth_Spacer.stl  Driving_Gears_Print_2x.stl  Driving_Gears_Print_2x_v2.stl  Driving_Gears_Print_2x_v3.stl  P1_Main_Altitude_Gear_Assembly.gcode  P2_Main_Altitude_Gear_Assembly.gcode
firmware/: Cargo.toml  altitude_encoder.csv  amateur.tle  azimuth_encoder.csv  co-58.tle  co-66.tle  iss.tle  jugnu.tle  left_encoder.csv  so-50.tle  somp.tle
firmware/src/: encoder.rs  main.rs  motors.rs  pid.rs  thunderborg.rs
output/: Main_Azimuth_Gear_Assembly.stl
