[package]
name = "firmware"
version = "0.1.0"
authors = ["Oliver Trevor <featherfeet5436@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.12.0"
ctrlc = "3.1.7"
text_io = "0.1.8"
atomicfloat = "0.1.0"

[dependencies.gpredict]
git = "https://github.com/connerebbinghaus/rust-gpredict.git"
